# 42_course

./: .gitignore
00_libft/: Makefile  ft_bzero.c  ft_isprint.c  ft_itoa.c  ft_lstadd_front.c  ft_lstlast.c  ft_lstnew.c  ft_memchr.c  ft_memcmp.c  ft_putchar_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strmapi.c  ft_strncmp.c  ft_strrchr.c  ft_strtrim.c  ft_toupper.c
01_get_next_line/: get_next_line.h  get_next_line_utils.c  get_next_line_utils_bonus.c
01_printf/: Makefile  ft_printf.c  ft_printf.h  ft_printf_function.c
02_pipex/: Makefile  a.out  main.c  pipex.h
02_pipex/00_libft/: ft_atoi.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstsize.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strnstr.c  ft_substr.c  ft_tolower.c  libft.h
02_pipex/mandatory/: pipex.c  pipex.h  pipex_util.c
02_push_swap/: makefile
02_push_swap/bonus/: ft_atoi.c  ft_free_exit.c  ft_revers_rotate.c  ft_rotate.c  ft_substr.c  ft_swap.c  push_swap_bonus.c  push_swap_bonus.h
02_push_swap/mandatory/: ft_calloc.c  ft_free_exit.c  ft_new_push.c  ft_push.c  ft_sort_check.c  ft_split.c  ft_strlen.c  ft_substr.c  hard_sort.c  push_swap.h  set_stack.c  stack_sort.c
02_so_long/: Makefile  check_map.c  check_map2.c  create_map.c  error_exit.c  get_map.c  get_next_line.c  get_next_line_utils.c  get_player.c  img_change.c  key_function.c  main.c  map.c  move_p.c  so_long.c  so_long.h
02_so_long/gnl/: a.out  get_next_line.c  get_next_line_bonus.c  get_next_line_bonus.h  main.c
02_so_long/img/: collect.xpm  down.xpm  down2.xpm  exit.xpm  ground.xpm  left.xpm  left2.xpm  right.xpm  right2.xpm  up.xpm  up2.xpm  wall.xpm
02_so_long/mlx/: mlx_image.swiftsourceinfo  mlx_init.swiftsourceinfo  mlx_window.swiftsourceinfo
03_minishell/: CMakeLists.txt  Makefile  ls  minishell
03_minishell/src/: main.c
03_minishell/src/execute/: ft_fork.c  ft_here_doc.c
03_minishell/src/parse/: signal.c
03_minishell/src/util/: ft_strcmp.c
03_philosophers/: act.c  main.c  philo.c  philo.h  philo_act.c  util.c
03_philosophers/.history/: main_20221212162339.c  main_20221212162546.c  main_20221212162653.c  philo_20221212162402.h  philo_20221212162519.h  philo_20221212162524.h  philo_20221212162529.h
03_philosophers/bonus/: Makefile  philo_bonus  philo_bonus.c  philo_bonus.h
03_philosophers/mandatory/: Makefile  (+4 more)
04_miniRT/: Makefile  miniRT
04_minishell/: minishell.c
05_ft_IRC/: main.cpp
Exam_03/: a.out  test.c
Exam_04/: a.out  microshell.c  test.c  test.out
Exam_06/: test.c
(+298 files in other folders)
